update spoon to 9.1.0

--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,7 @@ dependencies {
     implementation 'info.picocli:picocli:4.5.0'
     implementation "org.apache.logging.log4j:log4j-api:$log4jVersion"
     implementation "org.apache.logging.log4j:log4j-core:$log4jVersion"
-    implementation('fr.inria.gforge.spoon:spoon-core:8.2.0') {
-    	exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
-    }
+    implementation 'fr.inria.gforge.spoon:spoon-core:9.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.opencsv:opencsv:5.2'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.11.2'
